<resources>
    <string name="app_name">VaultTrip</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_label">Vault 設定</string>
    <string name="view_markdown">View Markdown</string>
    <string name="vault_browser">Vault Browser</string>
    <string name="select_vault_folder_label">選擇 Vault 資料夾</string>
    <string name="clear_vault_folder_label">清除Vault資料夾設定</string>
    <string name="vault_folder_cleared">已清除 Vault 資料夾</string>
    <string name="choose_template_label">選擇模板資料夾</string>
    <string name="clear_template_folder_label">清除模板資料夾設定</string>
    <string name="template_folder_cleared">已清除模板資料夾</string>
    <string name="location_template_uri_title_label">地點模板檔案路徑</string>
    <string name="choose_location_template_label">選擇地點模板檔案</string>
    <string name="clear_location_template_label">清除地點模板檔案</string>
    <string name="location_template_cleared">已清除地點模板</string>
    <string name="location_item_template_uri_title_label">地點項目模板檔案路徑</string>
    <string name="choose_location_item_template_label">選擇地點項目模板檔案</string>
    <string name="clear_location_item_template_label">清除地點項目模板檔案</string>
    <string name="location_item_template_cleared">已清除地點項目模板</string>
    <string name="itinerary_template_uri_title_label">行程模板檔案路徑</string>
    <string name="choose_itinerary_template_label">選擇行程模板檔案</string>
    <string name="clear_itinerary_template_label">清除行程模板檔案</string>
    <string name="itinerary_template_cleared">已清除行程模板</string>
    <string name="vault_folder_saved">已儲存 Vault 資料夾</string>
    <string name="template_folder_saved">已儲存 Template 資料夾</string>
    <string name="location_template_saved">已儲存地點模板</string>
    <string name="location_item_template_saved">已儲存地點項目模板</string>
    <string name="itinerary_template_saved">已儲存行程模板</string>
    <string name="no_folder_selected">未選擇任何資料夾</string>
    <string name="no_file_selected">未選擇任何檔案</string>
    <string name="template_uri_empty">無選擇檔案</string>
</resources>