<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.nickchi.vaulttrip.ui.MainFragment"
        android:label="@string/vault_browser">
        <action
            android:id="@+id/action_main_to_viewer"
            app:destination="@id/viewerFragment" />
        <action
            android:id="@+id/action_main_to_settings"
            app:destination="@id/settingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/viewerFragment"
        android:name="com.nickchi.vaulttrip.ui.MarkdownViewerFragment"
        android:label="@string/view_markdown" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.nickchi.vaulttrip.ui.SettingsFragment"
        android:label="@string/settings_label" />
</navigation>